--- a/TP1/Ferreira.Matias.2D.TP1/TP1/MiCalculadora.csproj
+++ b/TP1/Ferreira.Matias.2D.TP1/TP1/MiCalculadora.csproj
@@ -4,6 +4,12 @@
     <OutputType>WinExe</OutputType>
     <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <RootNamespace>MiCalculadora</RootNamespace>
+    <AssemblyName>MiCalculadora</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Entidades\Entidades.csproj" />
+  </ItemGroup>
 
 </Project>
